add additional property to notebook model
